# TurboGastos

./: .dockerignore  .env  .env.example  Dockerfile.node  Dockerfile.python  GEMINI.md  README.md  configure_envs.py  docker-compose.yml  index.js  package.json  worker.py
data/: gastos.db
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
gmail_reader/: .gitignore  Dockerfile  client_secret_1029996621257-pip1bihlsl4ki1kj2gebophuup79pov0.apps.googleusercontent.com.json  pyproject.toml  run.py
ingestor/: .dockerignore  .env.example  index.js
mcp_service/: Dockerfile  metadata.yml  pyproject.toml  run.py
sessions/session/: DevToolsActivePort  Local State
sessions/session/CertificateRevocation/10058/: crl-set  manifest.json
sessions/session/Default/: Cookies  DIPS  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
sessions/session/Default/DawnGraphiteCache/: data_1  index
sessions/session/Default/DawnWebGPUCache/: data_1  index
sessions/session/Default/Extension Rules/: LOG
sessions/session/GrShaderCache/: data_1  index
sessions/session/GraphiteDawnCache/: data_1  index
sessions/session/ShaderCache/: data_1  index
sessions/session/WidevineCdm/: latest-component-updated-widevine-cdm
sessions/session/component_crx_cache/: metadata.json
sessions/session/segmentation_platform/: ukm_db
worker/: .env.example  Dockerfile.python  pyproject.toml  worker.py
(+85 files in other folders)
